[Downloads] Set the Referrer header for resumed requests.

During downloads resumption, the newly created URLRequest was not
getting the Referrer header set. Now it is.

R=jam@chromium.org,svaldez@chromium.org
BUG=603670

Review URL: https://codereview.chromium.org/1891623003

Cr-Commit-Position: refs/heads/master@{#389636}

Former-commit-id: f7ae1f45615bc167f2081079557322eefba02c0b